# Codebase-Insights

./: .codebase-insights.example.toml  .gitignore  LICENSE  LSP.py  README.md  agent-navigator-instructions.md  codebase-insights-instructions.md  language_analysis.py  main.py  mcp_server.py  pyproject.toml  queries.json  semantic_indexer.py  workspace_indexer.py
.github/skills/agent-token-benchmark/: SKILL.md
.github/skills/benchmark-eval/: SKILL.md
.github/workflows/: ci.yml  publish.yml
benchmark_results/: full_rebuild.json
benchmarks/: agent-token-benchmark-context-v1.1.0.md  agent-token-benchmark-v1.1.0.md  benchmark-v0.1.0.md  benchmark-v0.2.1.md  benchmark-v0.2.4.md  benchmark-v1.0.1.md  benchmark-v1.1.0.md
docs/: agent-navigator-instructions.md  agent-token-benchmark-v1.1.0.md  agent-token-benchmark.md  agent-usage.md  benchmark-v0.1.1.md  benchmark-v0.2.0.md  benchmark-v0.2.3.md  benchmark-v0.2.4.md  benchmark-v1.0.0.md  benchmark-v1.1.0.md
scripts/: benchmark_monitor.py  copilot_sdk_benchmark.py  demo_agent_benchmark.py  demo_agent_benchmark_tasks.json  run_benchmark.py
src/codebase_insights/: LSP.py  cli_io.py  language_analysis.py  main.py  mcp_server.py  semantic_config.py  semantic_indexer.py  tui.py  workspace_indexer.py
tests/: test_language_analysis.py  test_workspace_indexer.py
