[project]
name = "codebase-insights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27.0",
    "tqdm>=4.67.3",
    "watchdog>=4.0.0",
    "langchain>=0.3",
    "langchain-ollama>=0.3",
    "langchain-openai>=0.3",
    "langchain-chroma>=0.2",
    "chromadb>=0.6",
]
