[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codebase-insights"
version = "1.1.0"
description = "LSP-powered code intelligence with AI semantic search, exposed as an MCP server"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27.0",
    "tqdm>=4.67.3",
    "watchdog>=4.0.0",
    "textual>=0.86",
    "langchain>=0.3",
    "langchain-ollama>=0.3",
    "langchain-openai>=0.3",
    "langchain-chroma>=0.2",
    "chromadb>=0.6",
]

[project.scripts]
codebase-insights = "codebase_insights.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codebase_insights"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
